--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -68,7 +68,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #1895bc;
   color: white;
 }
 header .container {
